<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause" />

    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_play"
        android:title="@string/resume" />

    <item
        android:id="@+id/action_force_start"
        android:title="@string/force_start" />

    <item
        android:id="@+id/action_recheck"
        android:title="@string/recheck" />

    <item
        android:id="@+id/action_reannounce"
        android:title="@string/reannounce" />

    <item
        android:id="@+id/action_sequential"
        android:title="@string/sequential_download" />

    <item
        android:id="@+id/action_top_priority"
        android:title="@string/top_priority" />

    <item
        android:id="@+id/action_bottom_priority"
        android:title="@string/bottom_priority" />

    <item
        android:id="@+id/action_category"
        android:title="@string/category" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>
