<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pause_resume_torrent_menu"
        android:icon="@drawable/ic_pause_24px"
        android:title="@string/pause_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_torrent_menu"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rename_torrent_menu"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/rename_torrent"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/change_location_menu"
        android:icon="@drawable/ic_drive_file_move_24px"
        android:title="@string/change_save_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/torrent_limits_menu"
        android:icon="@drawable/ic_speed_24px"
        android:title="@string/torrent_limits_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/super_seeding_menu"
        android:title="@string/super_seeding"
        app:showAsAction="never" />

    <item
        android:id="@+id/force_recheck_torrent_menu"
        android:title="@string/force_recheck_torrent"
        app:showAsAction="never" />

    <item
        android:id="@+id/force_announce_torrent_menu"
        android:title="@string/force_announce_torrent"
        app:showAsAction="never" />

    <item
        android:id="@+id/share_magnet_menu"
        android:title="@string/share_magnet"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_trackers_menu"
        android:title="@string/add_trackers"
        app:showAsAction="never" />
</menu>
