<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_pause"
        android:title="@string/pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_play"
        android:title="@string/resume"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_recheck"
        android:title="@string/recheck"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reannounce"
        android:title="@string/reannounce"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sequential"
        android:title="@string/sequential_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_super_seeding"
        android:title="@string/super_seeding"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
