<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_categories"
        android:title="@string/categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_speed_limits"
        android:title="@string/speed_limits"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_local_engine"
        android:title="@string/local_engine"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
