<?xml version="1.0" encoding="utf-8"?>
<!-- Trackers selection action mode, qBC parity: share / edit / delete +
     select all / inverse. Add-tracker lives in the toolbar. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_url_menu"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_tracker_url"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/edit_tracker_url"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_tracker_url"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all_trackers_menu"
        android:icon="@drawable/ic_select_all_24px"
        android:title="@string/action_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/select_inverse_trackers_menu"
        android:title="@string/action_select_inverse"
        app:showAsAction="never" />
</menu>
